Fix/add missing export and opens module declarations (#23)
* Add missing exports and opens declarations

* Configure executions for jpackager for different operating systems